joetechsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: joetechsvc
spec:
  selector:
    app: joetechapp
  ports:
  - port: 80
    targetPort: 8080
