joetecing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joetechingress
  labels:
    name: joetechingress
spec:
  ingressClassName: nginx
  rules:
  - host: josephaggrey.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: joetechsvc
            port: 
              number: 80
